--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       var VSHADER_SOURCE = `
         attribute vec4 a_Position;
         attribute vec4 a_Color;
+        uniform mat4 u_ViewMatrix;
         uniform mat4 u_ProjMatrix;
         varying vec4 v_Color;
         void main(){
-            gl_Position = u_ProjMatrix  * a_Position;
+            gl_Position = u_ProjMatrix*u_ViewMatrix  * a_Position;
             v_Color = a_Color;
         }
         `
@@ -38,9 +39,6 @@
           console.log('failed to retrieve the canvas element')
           return false
         }
-        var nf = document.getElementById('nearFar')
-        console.log('nf', nf)
-
         var gl = getWebGLContext(canvas)
         if (!gl) {
           console.log('Failed to get rending contextfor webgl')
@@ -50,40 +48,140 @@
           return
         }
         var n = initVertexBuffers(gl)
-        console.log('n', n)
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
-
         var u_ProjMatrix = gl.getUniformLocation(gl.program, 'u_ProjMatrix')
-
-        console.log('u_ProjMatrix', u_ProjMatrix)
-
+        var u_ViewMatrix = gl.getUniformLocation(gl.program, 'u_ViewMatrix')
         var viewMatrix = new Matrix4()
-        document.onkeydown = function (ev) {
-          keydown(ev, gl, n, u_ProjMatrix, viewMatrix, nf)
-        }
-
-        // var projMatrix = new Matrix4()
-        // projMatrix.setOrtho(-1.0, 1.0, -1.0, 1.0, 0.0, 2.0)
-        // gl.uniformMatrix4fv(u_ProjMatrix, false, projMatrix.elements)
-
-        draw(gl, n, u_ProjMatrix, viewMatrix, nf)
+        var projMatrix = new Matrix4()
+        viewMatrix.setLookAt(0, 0, 5, 0, 0, -100, 1, 0)
+        projMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
+        gl.uniformMatrix4fv(u_ViewMatrix, false, viewMatrix.elements)
+        gl.uniformMatrix4fv(u_ProjMatrix, false, projMatrix.elements)
+        gl.clear(gl.COLOR_BUFFER_BIT)
+        gl.drawArrays(gl.TRIANGLES, 0, n)
       }
 
       function initVertexBuffers(gl) {
         var verticesColors = new Float32Array([
-          0.0, 0.6, -0.4, 0.4, 1.0, 0.4, -0.5, -0.4, -0.4, 0.4, 1.0, 0.4, 0.5,
-          -0.4, -0.4, 1.0, 0.4, 0.4,
+          0.75,
+          1.0,
+          -4.0,
+          0.4,
+          1.0,
+          0.4, // The back green one
+          0.25,
+          -1.0,
+          -4.0,
+          0.4,
+          1.0,
+          0.4,
+          1.25,
+          -1.0,
+          -4.0,
+          1.0,
+          0.4,
+          0.4,
 
-          0.5, 0.4, -0.2, 1.0, 0.4, 0.4, -0.5, 0.4, -0.2, 1.0, 1.0, 0.4, 0.0,
-          -0.6, -0.2, 1.0, 1.0, 0.4,
+          0.75,
+          1.0,
+          -2.0,
+          1.0,
+          1.0,
+          0.4, // The middle yellow one
+          0.25,
+          -1.0,
+          -2.0,
+          1.0,
+          1.0,
+          0.4,
+          1.25,
+          -1.0,
+          -2.0,
+          1.0,
+          0.4,
+          0.4,
 
-          0.0, 0.5, 0.0, 0.4, 0.4, 1.0, -0.5, -0.5, 0.0, 0.4, 0.4, 1.0, 0.5,
-          -0.5, 0.0, 1.0, 0.4, 0.4,
+          0.75,
+          1.0,
+          0.0,
+          0.4,
+          0.4,
+          1.0, // The front blue one
+          0.25,
+          -1.0,
+          0.0,
+          0.4,
+          0.4,
+          1.0,
+          1.25,
+          -1.0,
+          0.0,
+          1.0,
+          0.4,
+          0.4,
+
+          // Three triangles on the left side
+          -0.75,
+          1.0,
+          -4.0,
+          0.4,
+          1.0,
+          0.4, // The back green one
+          -1.25,
+          -1.0,
+          -4.0,
+          0.4,
+          1.0,
+          0.4,
+          -0.25,
+          -1.0,
+          -4.0,
+          1.0,
+          0.4,
+          0.4,
+
+          -0.75,
+          1.0,
+          -2.0,
+          1.0,
+          1.0,
+          0.4, // The middle yellow one
+          -1.25,
+          -1.0,
+          -2.0,
+          1.0,
+          1.0,
+          0.4,
+          -0.25,
+          -1.0,
+          -2.0,
+          1.0,
+          0.4,
+          0.4,
+
+          -0.75,
+          1.0,
+          0.0,
+          0.4,
+          0.4,
+          1.0, // The front blue one
+          -1.25,
+          -1.0,
+          0.0,
+          0.4,
+          0.4,
+          1.0,
+          -0.25,
+          -1.0,
+          0.0,
+          1.0,
+          0.4,
+          0.4,
         ])
 
         console.log('verticesColors', verticesColors)
 
-        var n = 9
+        var n = 18
 
         var vertexColorBuffer = gl.createBuffer()
         console.log(vertexColorBuffer)
@@ -116,45 +214,6 @@
         gl.enableVertexAttribArray(a_Color)
 
         return n
-      }
-
-      var g_near = 0.0,
-        g_far = 0.5
-
-      function keydown(ev, gl, n, u_ProjMatrix, viewMatrix, nf) {
-        switch (ev.keyCode) {
-          case 39:
-            g_near += 0.01
-            break
-          case 37:
-            g_near -= 0.01
-            break
-          case 38:
-            g_far += 0.01
-            break
-          case 40:
-            g_far -= 0.01
-            break
-          default:
-            return
-        }
-        draw(gl, n, u_ProjMatrix, viewMatrix, nf)
-      }
-
-      function draw(gl, n, u_ProjMatrix, viewMatrix, nf) {
-        viewMatrix.setOrtho(-1.0, 1.0, -1.0, 1.0, g_near, g_far)
-
-        gl.uniformMatrix4fv(u_ProjMatrix, false, viewMatrix.elements)
-
-        gl.clear(gl.COLOR_BUFFER_BIT)
-
-        nf.innerHTML =
-          'near: ' +
-          Math.round(g_near * 100) / 100 +
-          ', far: ' +
-          Math.round(g_far * 100) / 100
-
-        gl.drawArrays(gl.TRIANGLES, 0, n)
       }
     </script>
   </body>
