--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
+</head>
 
-  <body onLoad="main()">
+<body onLoad="main()">
     <canvas id="example" width="700" height="700"></canvas>
     <script src="./lib/webgl-utils.js"></script>
     <script src="./lib/webgl-debug.js"></script>
     <script src="./lib/cuon-utils.js"></script>
     <script src="./lib/cuon-matrix.js"></script>
     <script>
-      var VSHADER_SOURCE = `
+        var VSHADER_SOURCE = `
         attribute vec4 a_Position;
         attribute vec4 a_Color;
-        uniform mat4 u_MvpMatrix;
+        uniform mat4 u_ViewProjMatrix;
         varying vec4 v_Color;
         void main(){
-            gl_Position = u_MvpMatrix *a_Position;
+            gl_Position = u_ViewProjMatrix *a_Position;
             v_Color = a_Color;
         }
         `
-      var FSHADER_SOURCE = `
+        var FSHADER_SOURCE = `
         precision mediump float;
         varying vec4 v_Color;
         void main(){            
@@ -32,86 +33,115 @@
         }
         `
 
-      function main() {
-        var canvas = document.getElementById('example')
-        if (!canvas) {
-          console.log('failed to retrieve the canvas element')
-          return false
+        function main() {
+            var canvas = document.getElementById('example')
+            if (!canvas) {
+                console.log('failed to retrieve the canvas element')
+                return false
+            }
+            var gl = getWebGLContext(canvas)
+            if (!gl) {
+                console.log('Failed to get rending contextfor webgl')
+            }
+            if (!initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)) {
+                console.log('failed to initialize shaders')
+                return
+            }
+            var n = initVertexBuffers(gl)
+            gl.clearColor(0.0, 0.0, 0.0, 1.0)
+            gl.enable(gl.DEPTH_TEST)
+            var u_ViewProjMatrix = gl.getUniformLocation(
+                gl.program,
+                'u_ViewProjMatrix'
+            )
+            var viewProjMatrix = new Matrix4()
+            viewProjMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
+
+            viewProjMatrix.lookAt(3.06, 2.5, 10.0, 0, 0, -2, 0, 1, 0)
+
+            gl.uniformMatrix4fv(u_ViewProjMatrix, false, viewProjMatrix.elements)
+
+            gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
+
+            gl.enable(gl.POLYGON_OFFSET_FILL)
+
+            gl.drawArrays(gl.TRIANGLES, 0, n / 2)
+
+            gl.polygonOffset(1.0, 1.0)
+
+            gl.drawArrays(gl.TRIANGLES, n / 2, n / 2)
         }
-        var gl = getWebGLContext(canvas)
-        if (!gl) {
-          console.log('Failed to get rending contextfor webgl')
+
+        function initVertexBuffers(gl) {
+            var verticesColors = new Float32Array([
+                0.0,
+                2.5,
+                -5.0,
+                0.4,
+                1.0,
+                0.4,
+
+                -2.5,
+                -2.5,
+                -5.0,
+                0.4,
+                1.0,
+                0.4,
+
+                2.5,
+                -2.5,
+                -5.0,
+                1.0,
+                0.4,
+                0.4, //blue
+
+                0.0,
+                3.0,
+                -5.0,
+                1.0,
+                0.4,
+                0.4,
+
+                -3.0,
+                -3.0,
+                -5.0,
+                1.0,
+                1.0,
+                0.4,
+
+                3.0,
+                -3.0,
+                -5.0,
+                1.0,
+                1.0,
+                0.4, //yellow
+            ])
+            console.log('verticesColors', verticesColors)
+            var n = 6
+            var vertexColorBuffer = gl.createBuffer()
+            if (!vertexColorBuffer) {
+                console.log('Failed to create the buffer object')
+                return -1
+            }
+            gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer)
+            gl.bufferData(gl.ARRAY_BUFFER, verticesColors, gl.STATIC_DRAW)
+            var FSIZE = verticesColors.BYTES_PER_ELEMENT
+            var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
+            gl.vertexAttribPointer(a_Position, 3, gl.FLOAT, false, FSIZE * 6, 0)
+            gl.enableVertexAttribArray(a_Position)
+            var a_Color = gl.getAttribLocation(gl.program, 'a_Color')
+            gl.vertexAttribPointer(
+                a_Color,
+                3,
+                gl.FLOAT,
+                false,
+                FSIZE * 6,
+                FSIZE * 3
+            )
+            gl.enableVertexAttribArray(a_Color)
+            return n
         }
-        if (!initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)) {
-          console.log('failed to initialize shaders')
-          return
-        }
-        var n = initVertexBuffers(gl)
-        gl.clearColor(0.0, 0.0, 0.0, 1.0)
-        var u_MvpMatrix = gl.getUniformLocation(gl.program, 'u_MvpMatrix')
-        var modelMatrix = new Matrix4()
-        var viewMatrix = new Matrix4()
-        var projMatrix = new Matrix4()
-        var mvpMatrix = new Matrix4()
-        modelMatrix.setTranslate(0.75, 0, 0)
-        viewMatrix.setLookAt(0, 0, 5, 0, 0, -100, 0, 1, 0)
-        projMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
-        mvpMatrix.set(projMatrix).multiply(viewMatrix).multiply(modelMatrix)
-        gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
-        gl.enable(gl.DEPTH_TEST)
-        gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
-        gl.drawArrays(gl.TRIANGLES, 0, n)
-        modelMatrix.setTranslate(-0.75, 0, 0)
-        mvpMatrix.set(projMatrix).multiply(viewMatrix).multiply(modelMatrix)
-        gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
-        gl.drawArrays(gl.TRIANGLES, 0, n)
-      }
-
-      function initVertexBuffers(gl) {
-        var verticesColors = new Float32Array([
-        0.0, 1.0, 0.0, 0.4, 0.4, 1.0,
-
-          -0.5, -1.0, 0.0, 0.4, 0.4, 1.0,
-
-          0.5, -1.0, 0.0, 1.0, 0.4, 0.4, //blue
-
-          0.0, 1.0, -2.0, 1.0, 1.0, 0.4,
-
-          -0.5, -1.0, -2.0, 1.0, 1.0, 0.4,
-
-          0.5, -1.0, -2.0, 1.0, 0.4, 0.4, //yellow
-
-          0.0, 1.0, -4.0, 0.4, 1.0, 0.4,
-
-          -0.5, -1.0, -4.0, 0.4, 1.0, 0.4,
-
-          0.5, -1.0, -4.0, 1.0, 0.4, 0.4, //green
-        ])
-        console.log('verticesColors', verticesColors)
-        var n = 9
-        var vertexColorBuffer = gl.createBuffer()
-        if (!vertexColorBuffer) {
-          console.log('Failed to create the buffer object')
-          return -1
-        }
-        gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer)
-        gl.bufferData(gl.ARRAY_BUFFER, verticesColors, gl.STATIC_DRAW)
-        var FSIZE = verticesColors.BYTES_PER_ELEMENT
-        var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
-        gl.vertexAttribPointer(a_Position, 3, gl.FLOAT, false, FSIZE * 6, 0)
-        gl.enableVertexAttribArray(a_Position)
-        var a_Color = gl.getAttribLocation(gl.program, 'a_Color')
-        gl.vertexAttribPointer(
-          a_Color,
-          3,
-          gl.FLOAT,
-          false,
-          FSIZE * 6,
-          FSIZE * 3
-        )
-        gl.enableVertexAttribArray(a_Color)
-        return n
-      }
     </script>
-  </body>
+</body>
+
 </html>
