--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
         }
 
         function initVertexBuffers(gl) {
-            var verticesColors = new Float32Array([
-                1.0,
-                1.0,
-                1.0,
+            var vertices = new Float32Array([
                 1.0,
                 1.0,
                 1.0,
@@ -79,54 +76,197 @@
                 -1.0,
                 1.0,
                 1.0,
-                1.0,
-                0.0,
-                1.4,
 
                 -1.0,
                 -1.0,
                 1.0,
+
                 1.0,
-                0.0,
-                0.1, //blue
+                -1.0,
+                1.0, //first
+
+                1.0,
+                1.0,
+                1.0,
 
                 1.0,
                 -1.0,
                 1.0,
-                1.0,
-                1.0,
-                0.0,
 
                 1.0,
                 -1.0,
                 -1.0,
-                0.0,
+
                 1.0,
-                0.0,
+                1.0,
+                -1.0, //sec
+
+                1.0,
+                1.0,
+                1.0,
 
                 1.0,
                 1.0,
                 -1.0,
-                0.0,
-                1.0,
-                1.0, //yellow
-
 
                 -1.0,
                 1.0,
                 -1.0,
-                0.0,
+
+                -1.0,
+                1.0,
+                1.0, //third
+
+
+                -1.0,
                 1.0,
                 1.0,
 
                 -1.0,
+                1.0,
+                -1.0,
+
                 -1.0,
                 -1.0,
-                0.0,
-                0.0,
-                0.0, //yellow
+                -1.0,
+
+                -1.0,
+                -1.0,
+                1.0, //fourth
+
+                -1.0,
+                -1.0,
+                -1.0,
+
+                1.0,
+                -1.0,
+                -1.0,
+
+                1.0,
+                -1.0,
+                1.0,
+
+                -1.0,
+                -1.0,
+                1.0, //fifth
+
+                1.0,
+                -1.0,
+                -1.0,
+
+                -1.0,
+                -1.0,
+                -1.0,
+
+                -1.0,
+                1.0,
+                -1.0,
+
+                1.0,
+                1.0,
+                -1.0, //sixth
             ])
-            console.log('verticesColors', verticesColors)
+            console.log('vertices', vertices)
+
+            var colors = new Float32Array([
+                0.4,
+                0.4,
+                1.0,
+
+                0.4,
+                0.4,
+                1.0,
+
+                0.4,
+                0.4,
+                1.0,
+
+                0.4,
+                0.4,
+                1.0, //first
+
+                0.4,
+                1.0,
+                0.4,
+
+                1.0,
+                -1.0,
+                1.0,
+
+                1.0,
+                -1.0,
+                -1.0,
+
+                1.0,
+                1.0,
+                -1.0, //sec
+
+                1.0,
+                1.0,
+                1.0,
+
+                1.0,
+                1.0,
+                -1.0,
+
+                -1.0,
+                1.0,
+                -1.0,
+
+                -1.0,
+                1.0,
+                1.0, //third
+
+
+                -1.0,
+                1.0,
+                1.0,
+
+                -1.0,
+                1.0,
+                -1.0,
+
+                -1.0,
+                -1.0,
+                -1.0,
+
+                -1.0,
+                -1.0,
+                1.0, //fourth
+
+                -1.0,
+                -1.0,
+                -1.0,
+
+                1.0,
+                -1.0,
+                -1.0,
+
+                1.0,
+                -1.0,
+                1.0,
+
+                -1.0,
+                -1.0,
+                1.0, //fifth
+
+                1.0,
+                -1.0,
+                -1.0,
+
+                -1.0,
+                -1.0,
+                -1.0,
+
+                -1.0,
+                1.0,
+                -1.0,
+
+                1.0,
+                1.0,
+                -1.0, //sixth
+            ])
+            console.log('colors', colors)
 
 
             var indices = new Uint8Array([
@@ -138,7 +278,7 @@
                 4, 7, 6, 4, 6, 5
             ])
 
-            
+
             var vertexColorBuffer = gl.createBuffer()
             var indexBuffer = gl.createBuffer()
             if (!vertexColorBuffer) {
@@ -152,8 +292,8 @@
 
 
             gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer)
-            gl.bufferData(gl.ARRAY_BUFFER, verticesColors, gl.STATIC_DRAW)
-            var FSIZE = verticesColors.BYTES_PER_ELEMENT
+            gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW)
+            var FSIZE = vertices.BYTES_PER_ELEMENT
             var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
             gl.vertexAttribPointer(a_Position, 3, gl.FLOAT, false, FSIZE * 6, 0)
             gl.enableVertexAttribArray(a_Position)
