--- a/index.html
+++ b/index.html
@@ -69,251 +69,73 @@
 
         function initVertexBuffers(gl) {
             var vertices = new Float32Array([
-                1.0,
-                1.0,
-                1.0,
-
-                -1.0,
-                1.0,
-                1.0,
-
-                -1.0,
-                -1.0,
-                1.0,
-
-                1.0,
-                -1.0,
-                1.0, //first
-
-                1.0,
-                1.0,
-                1.0,
-
-                1.0,
-                -1.0,
-                1.0,
-
-                1.0,
-                -1.0,
-                -1.0,
-
-                1.0,
-                1.0,
-                -1.0, //sec
-
-                1.0,
-                1.0,
-                1.0,
-
-                1.0,
-                1.0,
-                -1.0,
-
-                -1.0,
-                1.0,
-                -1.0,
-
-                -1.0,
-                1.0,
-                1.0, //third
-
-
-                -1.0,
-                1.0,
-                1.0,
-
-                -1.0,
-                1.0,
-                -1.0,
-
-                -1.0,
-                -1.0,
-                -1.0,
-
-                -1.0,
-                -1.0,
-                1.0, //fourth
-
-                -1.0,
-                -1.0,
-                -1.0,
-
-                1.0,
-                -1.0,
-                -1.0,
-
-                1.0,
-                -1.0,
-                1.0,
-
-                -1.0,
-                -1.0,
-                1.0, //fifth
-
-                1.0,
-                -1.0,
-                -1.0,
-
-                -1.0,
-                -1.0,
-                -1.0,
-
-                -1.0,
-                1.0,
-                -1.0,
-
-                1.0,
-                1.0,
-                -1.0, //sixth
+            1.0, 1.0, 1.0,  -1.0, 1.0, 1.0,  -1.0,-1.0, 1.0,   1.0,-1.0, 1.0,  // v0-v1-v2-v3 front
+     1.0, 1.0, 1.0,   1.0,-1.0, 1.0,   1.0,-1.0,-1.0,   1.0, 1.0,-1.0,  // v0-v3-v4-v5 right
+     1.0, 1.0, 1.0,   1.0, 1.0,-1.0,  -1.0, 1.0,-1.0,  -1.0, 1.0, 1.0,  // v0-v5-v6-v1 up
+    -1.0, 1.0, 1.0,  -1.0, 1.0,-1.0,  -1.0,-1.0,-1.0,  -1.0,-1.0, 1.0,  // v1-v6-v7-v2 left
+    -1.0,-1.0,-1.0,   1.0,-1.0,-1.0,   1.0,-1.0, 1.0,  -1.0,-1.0, 1.0,  // v7-v4-v3-v2 down
+     1.0,-1.0,-1.0,  -1.0,-1.0,-1.0,  -1.0, 1.0,-1.0,   1.0, 1.0,-1.0   // v4-v7-v6-v5 back
             ])
-            console.log('vertices', vertices)
 
             var colors = new Float32Array([
-                0.4,
-                0.4,
-                1.0,
-
-                0.4,
-                0.4,
-                1.0,
-
-                0.4,
-                0.4,
-                1.0,
-
-                0.4,
-                0.4,
-                1.0, //first
-
-                0.4,
-                1.0,
-                0.4,
-
-                1.0,
-                -1.0,
-                1.0,
-
-                1.0,
-                -1.0,
-                -1.0,
-
-                1.0,
-                1.0,
-                -1.0, //sec
-
-                1.0,
-                1.0,
-                1.0,
-
-                1.0,
-                1.0,
-                -1.0,
-
-                -1.0,
-                1.0,
-                -1.0,
-
-                -1.0,
-                1.0,
-                1.0, //third
-
-
-                -1.0,
-                1.0,
-                1.0,
-
-                -1.0,
-                1.0,
-                -1.0,
-
-                -1.0,
-                -1.0,
-                -1.0,
-
-                -1.0,
-                -1.0,
-                1.0, //fourth
-
-                -1.0,
-                -1.0,
-                -1.0,
-
-                1.0,
-                -1.0,
-                -1.0,
-
-                1.0,
-                -1.0,
-                1.0,
-
-                -1.0,
-                -1.0,
-                1.0, //fifth
-
-                1.0,
-                -1.0,
-                -1.0,
-
-                -1.0,
-                -1.0,
-                -1.0,
-
-                -1.0,
-                1.0,
-                -1.0,
-
-                1.0,
-                1.0,
-                -1.0, //sixth
+                0.4, 0.4, 1.0, 0.4, 0.4, 1.0, 0.4, 0.4, 1.0, 0.4, 0.4, 1.0, // v0-v1-v2-v3 front(blue)
+                0.4, 1.0, 0.4, 0.4, 1.0, 0.4, 0.4, 1.0, 0.4, 0.4, 1.0, 0.4, // v0-v3-v4-v5 right(green)
+                1.0, 0.4, 0.4, 1.0, 0.4, 0.4, 1.0, 0.4, 0.4, 1.0, 0.4, 0.4, // v0-v5-v6-v1 up(red)
+                1.0, 1.0, 0.4, 1.0, 1.0, 0.4, 1.0, 1.0, 0.4, 1.0, 1.0, 0.4, // v1-v6-v7-v2 left
+                1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, // v7-v4-v3-v2 down
+                0.4, 1.0, 1.0, 0.4, 1.0, 1.0, 0.4, 1.0, 1.0, 0.4, 1.0, 1.0 // v4-v7-v6-v5 back
             ])
-            console.log('colors', colors)
 
 
             var indices = new Uint8Array([
-                0, 1, 2, 0, 2, 3,
-                0, 3, 4, 0, 4, 5,
-                0, 5, 6, 0, 6, 1,
-                1, 6, 7, 1, 7, 2,
-                7, 4, 3, 7, 3, 2,
-                4, 7, 6, 4, 6, 5
+                0, 1, 2, 0, 2, 3, // front
+                4, 5, 6, 4, 6, 7, // right
+                8, 9, 10, 8, 10, 11, // up
+                12, 13, 14, 12, 14, 15, // left
+                16, 17, 18, 16, 18, 19, // down
+                20, 21, 22, 20, 22, 23 // back
             ])
 
 
-            var vertexColorBuffer = gl.createBuffer()
             var indexBuffer = gl.createBuffer()
-            if (!vertexColorBuffer) {
-                console.log('Failed to create the buffer object')
-                return -1
-            }
+
             if (!indexBuffer) {
                 console.log('Failed to create the buffer object')
                 return -1
             }
 
-
-            gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer)
-            gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW)
-            var FSIZE = vertices.BYTES_PER_ELEMENT
-            var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
-            gl.vertexAttribPointer(a_Position, 3, gl.FLOAT, false, FSIZE * 6, 0)
-            gl.enableVertexAttribArray(a_Position)
-            var a_Color = gl.getAttribLocation(gl.program, 'a_Color')
-            gl.vertexAttribPointer(
-                a_Color,
-                3,
-                gl.FLOAT,
-                false,
-                FSIZE * 6,
-                FSIZE * 3
-            )
-            gl.enableVertexAttribArray(a_Color)
+            if (!initArrayBuffer(gl, vertices, 3, gl.FLOAT, 'a_Position'))
+                return -1
+            if (!initArrayBuffer(gl, colors, 3, gl.FLOAT, 'a_Color'))
+                return -1
 
 
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer)
-
             gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW)
 
+
             return indices.length
+        }
+
+        function initArrayBuffer(gl, data, num, type, attribute) {
+            var buffer = gl.createBuffer()
+            if (!buffer) {
+                return false
+            }
+            gl.bindBuffer(gl.ARRAY_BUFFER, buffer)
+            gl.bufferData(gl.ARRAY_BUFFER, data, gl.STATIC_DRAW)
+
+            var a_attribute = gl.getAttribLocation(gl.program, attribute)
+
+            if (a_attribute < 0) {
+                return false
+            }
+
+            gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0)
+
+            gl.enableVertexAttribArray(a_attribute)
+            return true
+
         }
     </script>
 </body>
