--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
         var VSHADER_SOURCE = `
         attribute vec4 a_Position;
         attribute vec4 a_Color;
+        attribute vec4 a_Normal;
         uniform mat4 u_MvpMatrix;
+        uniform vec3 u_LightColor;
+        uniform vec3 u_LightDirection;
         varying vec4 v_Color;
         void main(){
             gl_Position = u_MvpMatrix *a_Position;
-            v_Color = a_Color;
+            vec3 normal = normalize( a_Normal.xyz )
+            float nDotL = max( dot(u_LightDirection,normal),0.0 );
+            vec3 diffuse = u_LightColor * a_Color.rgb * nDotL;
+            v_Color = vec4(diffuse,a_Color.a);
         }
         `
         var FSHADER_SOURCE = `
@@ -50,13 +56,21 @@
             var n = initVertexBuffers(gl)
             gl.clearColor(0.0, 0.0, 0.0, 1.0)
             gl.enable(gl.DEPTH_TEST)
-
             var u_MvpMatrix = gl.getUniformLocation(
                 gl.program,
                 'u_MvpMatrix'
             )
+            var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor')
+            var u_LightDirection = gl.getUniformLocation(gl.program, 'u_LightDirection')
+
+            gl.uniform3f(u_LightColor, 1.0, 1.0, 1.0)
+
+            var lightDirection = new Vector3([0.5, 3.0, 4.0])
+
+            lightDirection.normalize()
+            gl.uniform3fv(u_LightDirection, lightDirection.elements)
             var mvpMatrix = new Matrix4()
-            mvpMatrix.setPerspective(23, 1, 1, 90)
+            mvpMatrix.setPerspective(23, canvas.width / canvas.height, 1, 100)
 
             mvpMatrix.lookAt(3, 3, 7, 0, 0, 0, 0, 1, 0)
 
