--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         attribute vec4 a_Normal;
         uniform mat4 u_MvpMatrix;
         uniform vec3 u_LightColor;
+        uniform vec3 u_NormalMatrix;
         uniform vec3 u_LightDirection;
         varying vec4 v_Color;
         void main(){
@@ -65,7 +66,7 @@
 
             gl.uniform3f(u_LightColor, 1.0, 1.0, 1.0)
 
-            var lightDirection = new Vector3([3.5, 3.0, 4.0])
+            var lightDirection = new Vector3([0.5, 3.0, 4.0])
 
             lightDirection.normalize()
             gl.uniform3fv(u_LightDirection, lightDirection.elements)
