--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
         attribute vec4 a_Color;
         attribute vec4 a_Normal;
         uniform mat4 u_MvpMatrix;
-        uniform vec3 u_LightColor;
-        uniform vec3 u_NormalMatrix;
+        uniform mat4 u_NormalMatrix;
         uniform vec3 u_LightDirection;
         varying vec4 v_Color;
         void main(){
             gl_Position = u_MvpMatrix *a_Position;
-            vec3 normal = normalize( a_Normal.xyz );
-            float nDotL = max( dot(u_LightDirection,normal),0.0 );
-            vec3 diffuse = u_LightColor * a_Color.rgb * nDotL;
-            v_Color = vec4(diffuse,a_Color.a);
+            vec4 normal =  u_NormalMatrix*a_Normal;
+            float nDotL = max( dot(u_LightDirection,normalize(normal.xyz) ),0.0 );          
+            v_Color = vec4( a_Color.xyz*nDotL ,a_Color.a);
         }
         `
         var FSHADER_SOURCE = `
@@ -61,25 +59,46 @@
                 gl.program,
                 'u_MvpMatrix'
             )
-            var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor')
+            var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix')
             var u_LightDirection = gl.getUniformLocation(gl.program, 'u_LightDirection')
 
-            gl.uniform3f(u_LightColor, 1.0, 1.0, 1.0)
+
+
+            var vpMatrix = new Matrix4()
+            vpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
+            vpMatrix.lookAt(3, 3, 7, 0, 0, 0, 0, 1, 0)
+
 
             var lightDirection = new Vector3([0.5, 3.0, 4.0])
 
             lightDirection.normalize()
             gl.uniform3fv(u_LightDirection, lightDirection.elements)
+
+            var currentAngle = 0.0;
+            var modelMatrix = new Matrix4()
             var mvpMatrix = new Matrix4()
-            mvpMatrix.setPerspective(23, canvas.width / canvas.height, 1, 100)
+            var normalMatrix = new Matrix4()
 
-            mvpMatrix.lookAt(3, 3, 7, 0, 0, 0, 0, 1, 0)
+            var tick = function () {
+                currentAngle = animate(currentAngle)
+                modelMatrix.setRotate(currentAngle, 0, 1, 0)
+                mvpMatrix.set(vpMatrix).multiply(modelMatrix)
+                gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
+                normalMatrix.setInverseOf(modelMatrix)
+                normalMatrix.transpose()
+                gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
 
-            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
+                gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
 
-            gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
+                gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
+                requestAnimationFrame(tick, canvas)
 
-            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
+            }
+            tick()
+        }
+
+        function draw(gl, nangle, vpMatrix, u_MvpMatrix, u_NormalMatrix) {
+
         }
 
         function initVertexBuffers(gl) {
@@ -120,6 +139,16 @@
                 20, 21, 22, 20, 22, 23 // back
             ])
 
+            if (!initArrayBuffer(gl, 'a_Position', vertices, 3, gl.FLOAT))
+                return -1
+            if (!initArrayBuffer(gl, 'a_Color', colors, 3, gl.FLOAT))
+                return -1
+
+            if (!initArrayBuffer(gl, 'a_Normal', normals, 3, gl.FLOAT))
+                return -1
+
+
+            gl.bindBuffer(gl.ARRAY_BUFFER, null)
 
             var indexBuffer = gl.createBuffer()
 
@@ -128,13 +157,7 @@
                 return -1
             }
 
-            if (!initArrayBuffer(gl, 'a_Position', vertices, 3, gl.FLOAT))
-                return -1
-            if (!initArrayBuffer(gl, 'a_Color', colors, 3, gl.FLOAT))
-                return -1
 
-            if (!initArrayBuffer(gl, 'a_Normal', normals, 3, gl.FLOAT))
-                return -1
 
 
 
@@ -166,6 +189,22 @@
             return true
 
         }
+
+        var ANGLE_STEP = 30.0;
+        var g_last = Date.now();
+        function animate(angle) {
+            var now = Date.now()
+            var elapsed = now - g_last;
+            g_last = now;
+            var newAngle = angle + (ANGLE_STEP * elapsed) / 1000.0
+
+            return newAngle %= 360
+
+
+        }
+
+
+
     </script>
 </body>
 
