--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
         void main(){
             gl_Position = u_MvpMatrix *a_Position;
             vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
-
             float nDotL = max( dot(u_LightDirection, normal ),0.0 );          
             vec3 diffuse = u_LightColor * a_Color.rgb*nDotL;
-
             vec3 ambient = u_AmbientLight * a_Color.rgb;
-
             v_Color = vec4( diffuse + ambient ,a_Color.a);
         }
         `
@@ -45,7 +42,6 @@
             gl_FragColor = v_Color;
         }
         `
-
         function main() {
             var canvas = document.getElementById('example')
             if (!canvas) {
@@ -86,9 +82,8 @@
             var mvpMatrix = new Matrix4()
             var normalMatrix = new Matrix4()
 
-
             modelMatrix.setTranslate(0, 0.9, 0)
-            modelMatrix.lookAt(3, 3, 7, 0, 0, 0, 0, 1, 0)
+            modelMatrix.rotate(90, 0, 0, 1)
 
 
             mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
@@ -106,30 +101,10 @@
 
             gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
 
-
-
-            // var tick = function () {
-            //     currentAngle = animate(currentAngle)
-            //     modelMatrix.setRotate(currentAngle, 0, 1, 0)
-            //     mvpMatrix.set(vpMatrix).multiply(modelMatrix)
-            //     gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
-            //     normalMatrix.setInverseOf(modelMatrix)
-            //     normalMatrix.transpose()
-            //     gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
-
             gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
 
             gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
-            //     requestAnimationFrame(tick, canvas)
-
-            // }
-            // tick()
         }
-
-        function draw(gl, nangle, vpMatrix, u_MvpMatrix, u_NormalMatrix) {
-
-        }
-
         function initVertexBuffers(gl) {
             var vertices = new Float32Array([
                 1.0, 1.0, 1.0, -1.0, 1.0, 1.0, -1.0, -1.0, 1.0, 1.0, -1.0, 1.0, // v0-v1-v2-v3 front
@@ -218,22 +193,6 @@
             return true
 
         }
-
-        var ANGLE_STEP = 30.0;
-        var g_last = Date.now();
-        function animate(angle) {
-            var now = Date.now()
-            var elapsed = now - g_last;
-            g_last = now;
-            var newAngle = angle + (ANGLE_STEP * elapsed) / 1000.0
-
-            return newAngle %= 360
-
-
-        }
-
-
-
     </script>
 </body>
 
