--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
         attribute vec4 a_Color;
         attribute vec4 a_Normal;
         uniform mat4 u_MvpMatrix;
-        uniform vec3 u_DiffuseLight;
+        uniform mat4 u_ModelMatrix;
         uniform mat4 u_NormalMatrix;
         uniform vec3 u_LightColor;
-        uniform vec3 u_LightDirection;
+        uniform vec3 u_LightPosition;    
         uniform vec3 u_AmbientLight;
         varying vec4 v_Color;
         void main(){
             gl_Position = u_MvpMatrix *a_Position;
             vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
+            vec4 vertexPosition = u_ModelMatrix * a_Position;
+            vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) )
             float nDotL = max( dot(u_LightDirection, normal ),0.0 );          
             vec3 diffuse = u_LightColor * a_Color.rgb*nDotL;
             vec3 ambient = u_AmbientLight * a_Color.rgb;
@@ -59,6 +61,7 @@
             var n = initVertexBuffers(gl)
             gl.clearColor(0.0, 0.0, 0.0, 1.0)
             gl.enable(gl.DEPTH_TEST)
+            var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix')
             var u_MvpMatrix = gl.getUniformLocation(
                 gl.program,
                 'u_MvpMatrix'
@@ -85,7 +88,6 @@
             modelMatrix.setTranslate(0, 0.9, 0)
             modelMatrix.rotate(90, 0, 0, 1)
 
-
             mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
             mvpMatrix.lookAt(3, 3, 7, 0, 0, 0, 0, 1, 0)
 
@@ -94,6 +96,7 @@
             mvpMatrix.multiply(modelMatrix)
 
             gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
+
 
             normalMatrix.setInverseOf(modelMatrix)
 
